--- a/index.html
+++ b/index.html
@@ -1,13 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
+    <!-- Bootstrap CSS loads first -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- Custom styles load after to override Bootstrap defaults -->
+    <link rel="stylesheet" href="CSS/reset.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/grid.css">
 </head>
+
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <div class="hud-bar">
+            <div class="logo">🎮 ANDHERSON COSTA.EXE</div>
+            <nav class="game-menu">
+                <span class="menu-item lives">LIVES: 1</span>
+                <a href="#" class="menu-item">MAP</a>
+                <a href="#" class="menu-item">BIOGRAPHY</a>
+                <a href="#" class="menu-item">PORTFOLIO</a>
+                <a href="#" class="menu-item">CONTACT</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="background-orbit-container">
+            <div class="icon glass">Java</div>
+            <div class="icon glass">Spring Boot</div>
+            <div class="icon glass">JavaScript</div>
+            <div class="icon glass">Python</div>
+            <div class="icon glass">React.JS</div>
+            <div class="icon glass">Next.JS</div>
+            <div class="icon glass">Node.JS</div>
+            <div class="icon glass">HTML</div>
+            <div class="icon glass">CSS</div>
+            <div class="icon glass">Tailwind CSS</div>
+            <div class="icon glass">Git</div>
+            <div class="icon glass">GitHub</div>
+            <div class="icon glass">PostgreSQL</div>
+            <div class="icon glass">SupaBase</div>
+            <div class="icon glass">Render</div>
+        </div>
+
+        <!-- 4-Square Grid Container -->
+        <div class="main-grid">
+            <!-- Section 1: Profile (Top-Left) -->
+            <section class="grid-card" id="profile">
+                <div class="card-header">
+                    <h2>👤 PROFILE</h2>
+                    <span class="level-badge">[LVL 99]</span>
+                </div>
+                <div class="card-body">
+                    <div class="profile-preview">
+                        <div class="avatar-small">
+                            <img src="https://avatars.githubusercontent.com/u/112807863?v=4" alt="Andherson Costa">
+                        </div>
+                        <div class="profile-text">
+                            <h3>Andherson Costa</h3>
+                            <p class="role">Data Analyst</p>
+                            <p class="sub-role">Software Developer</p>
+                        </div>
+                    </div>
+                    <div class="quick-stats">
+                        <div class="stat-item">
+                            <span class="stat-label">LOCATION:</span>
+                            <span class="stat-value">🇧🇷 Fortaleza, CE</span>
+                        </div>
+                        <div class="stat-item">
+                            <span class="stat-label">LANGUAGES:</span>
+                            <span class="stat-value">5 (PT, EN, NO, ES, IT)</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <a href="profile.html" class="view-more-btn">VIEW FULL PROFILE →</a>
+                </div>
+            </section>
+
+            <!-- Section 2: Bio (Top-Right) -->
+            <section class="grid-card" id="bio">
+                <div class="card-header">
+                    <h2>📖 BIO</h2>
+                    <span class="level-badge">[STORY]</span>
+                </div>
+                <div class="card-body">
+                    <p class="bio-preview">
+                        Currently bridging the gap between robust Java backends and high-performance React/Next.js
+                        interfaces.
+                    </p>
+                    <div class="highlights">
+                        <div class="highlight-item">✨ Full-Stack Developer</div>
+                        <div class="highlight-item">📊 Data Analysis Expert</div>
+                        <div class="highlight-item">🚀 Cloud Architecture</div>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <a href="bio.html" class="view-more-btn">READ FULL STORY →</a>
+                </div>
+            </section>
+
+            <!-- Section 3: Portfolio (Bottom-Left) -->
+            <section class="grid-card" id="portfolio">
+                <div class="card-header">
+                    <h2>💼 PORTFOLIO</h2>
+                    <span class="level-badge">[PROJECTS]</span>
+                </div>
+                <div class="card-body">
+                    <div class="project-preview">
+                        <div class="project-item">
+                            <span class="project-icon">🎮</span>
+                            <span class="project-name">Click-Office</span>
+                        </div>
+                        <div class="project-item">
+                            <span class="project-icon">🎴</span>
+                            <span class="project-name">CardVerse API</span>
+                        </div>
+                        <div class="project-item">
+                            <span class="project-icon">📊</span>
+                            <span class="project-name">Data Analytics</span>
+                        </div>
+                    </div>
+                    <div class="tech-stack-preview">
+                        <span class="tech-badge">Java</span>
+                        <span class="tech-badge">React</span>
+                        <span class="tech-badge">Next.js</span>
+                        <span class="tech-badge">+12</span>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <a href="portfolio.html" class="view-more-btn">EXPLORE PROJECTS →</a>
+                </div>
+            </section>
+
+            <!-- Section 4: Contact (Bottom-Right) -->
+            <section class="grid-card" id="contact">
+                <div class="card-header">
+                    <h2>📬 CONTACT</h2>
+                    <span class="level-badge">[REACH ME]</span>
+                </div>
+                <div class="card-body">
+                    <div class="contact-preview">
+                        <div class="contact-item">
+                            <span class="contact-icon">📧</span>
+                            <span class="contact-text">Email Available</span>
+                        </div>
+                        <div class="contact-item">
+                            <span class="contact-icon">💼</span>
+                            <span class="contact-text">LinkedIn Active</span>
+                        </div>
+                        <div class="contact-item">
+                            <span class="contact-icon">🐙</span>
+                            <span class="contact-text">GitHub Open</span>
+                        </div>
+                    </div>
+                    <div class="availability">
+                        <span class="status-indicator"></span>
+                        <span class="status-text">Available for Opportunities</span>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <a href="contact.html" class="view-more-btn">GET IN TOUCH →</a>
+                </div>
+            </section>
+        </div>
+    </main>
+    <footer>
+        <div class="hud-footer">
+            <div class="footer-left">
+                <span class="location-info">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-pin-map" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M3.1 11.2a.5.5 0 0 1 .4-.2H6a.5.5 0 0 1 0 1H3.75L1.5 15h13l-2.25-3H10a.5.5 0 0 1 0-1h2.5a.5.5 0 0 1 .4.2l3 4a.5.5 0 0 1-.4.8H.5a.5.5 0 0 1-.4-.8z" />
+                        <path fill-rule="evenodd"
+                            d="M8 1a3 3 0 1 0 0 6 3 3 0 0 0 0-6M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999z" />
+                    </svg>
+                    Fortaleza, Ceará, Brasil</span>
+                <span class="connection-info">🔴 CONNECTION: UNSTABLE (999ms)</span>
+            </div>
+            <div class="footer-right">
+                <span class="fps-counter">FPS: 999</span>
+                <div class="social-icons">
+                    <a href="https://github.com/oAndin" target="_blank" title="GitHub"><svg
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-github" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8" />
+                        </svg></a>
+                    <a href="https://linkedin.com/in/andhersoncosta" target="_blank" title="LinkedIn"><svg
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-linkedin" viewBox="0 0 16 16">
+                            <path
+                                d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
+                        </svg></a>
+                    <a href="https://instagram.com/andhersoncosta" target="_blank" title="Instagram"><svg
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-instagram" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
+                        </svg></a>
+                    <a href="" title="Twitch"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                            fill="currentColor" class="bi bi-twitch" viewBox="0 0 16 16">
+                            <path
+                                d="M3.857 0 1 2.857v10.286h3.429V16l2.857-2.857H9.57L14.714 8V0zm9.714 7.429-2.285 2.285H9l-2 2v-2H4.429V1.143h9.142z" />
+                            <path d="M11.857 3.143h-1.143V6.57h1.143zm-3.143 0H7.571V6.57h1.143z" />
+                        </svg></a>
+                    <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-spotify" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0m3.669 11.538a.5.5 0 0 1-.686.165c-1.879-1.147-4.243-1.407-7.028-.77a.499.499 0 0 1-.222-.973c3.048-.696 5.662-.397 7.77.892a.5.5 0 0 1 .166.686m.979-2.178a.624.624 0 0 1-.858.205c-2.15-1.321-5.428-1.704-7.972-.932a.625.625 0 0 1-.362-1.194c2.905-.881 6.517-.454 8.986 1.063a.624.624 0 0 1 .206.858m.084-2.268C10.154 5.56 5.9 5.419 3.438 6.166a.748.748 0 1 1-.434-1.432c2.825-.857 7.523-.692 10.492 1.07a.747.747 0 1 1-.764 1.288" />
+                        </svg></a>
+                    <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-youtube" viewBox="0 0 16 16">
+                            <path
+                                d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z" />
+                        </svg></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Dynamic HUD Stats Script -->
+    <script src="script.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
