loading and glitch update

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="CSS/reset.css">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/grid.css">
+    <link rel="stylesheet" href="CSS/loading.css">
 </head>
 
 <body>
     <header>
         <div class="hud-bar">
-            <div class="logo">🎮 ANDHERSON COSTA.EXE</div>
+            <div class="logo">ANDHERSON COSTA.EXE</div>
             <nav class="game-menu">
                 <span class="menu-item lives">LIVES: 1</span>
                 <a href="#" class="menu-item">MAP</a>
@@ -94,8 +95,8 @@
                     </p>
                     <div class="highlights">
                         <div class="highlight-item">✨ Full-Stack Developer</div>
-                        <div class="highlight-item">📊 Data Analysis Expert</div>
-                        <div class="highlight-item">🚀 Cloud Architecture</div>
+                        <div class="highlight-item">📊 Data Analysis</div>
+                        <div class="highlight-item">🚀 Cloud Architecture Student</div>
                     </div>
                 </div>
                 <div class="card-footer">
@@ -224,9 +225,14 @@
         </div>
     </footer>
 
+    <!-- CRT Loading Screen (loads first) -->
+    <script src="loading.js"></script>
+
     <!-- Dynamic HUD Stats Script -->
     <script src="script.js"></script>
 
+    <!-- Multilingual Glitch Effect -->
+    <script src="multilingual-glitch.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
