double loading fixed

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="hud-bar">
-            <div class="logo">ANDHERSON COSTA.EXE</div>
+            <div class="logo">ANDHERSON_COSTA.EXE</div>
             <nav class="game-menu">
                 <span class="menu-item lives">LIVES: 1</span>
                 <a href="#" class="menu-item">MAP</a>
@@ -45,6 +45,8 @@
             <div class="icon glass">PostgreSQL</div>
             <div class="icon glass">SupaBase</div>
             <div class="icon glass">Render</div>
+            <div class="icon glass">TypeScript</div>
+            <div class="icon glass"></div>
         </div>
 
         <!-- 4-Square Grid Container -->
